refactor: update backend endpoints

--- a/pay/group_sender_pay_success.html
+++ b/pay/group_sender_pay_success.html
@@ -16,7 +16,7 @@
             display: flex;
             align-items: center;
         '>
-        <img src="https://scrm-global.zingfront.com/sender/wapi_sender/wapi%20sender.jpeg" alt="images" width="60px" height="60px" style="background-color: transparent; border-radius: 30px;">
+        <img src="https://wazapsenderextension.vercel.app/sender/wapi_sender/wapi%20sender.jpeg" alt="images" width="60px" height="60px" style="background-color: transparent; border-radius: 30px;">
         &nbsp;&nbsp;<span style="color: #404040;">WA Group Sender Active Code(WAPlus LLC)</span>
     </p>
     <br/>
@@ -55,7 +55,7 @@
             color: #000000;
             font-size: 12pt;
             font-family: "Helvetica Neue", "Helvetica Neue", "Helvetica Neue", "Helvetica Neue";'>
-        <span style="font-weight: bold">How to Activate Code:&nbsp;&nbsp;</span><span><a href="https://scrm-global.zingfront.com/sender/wapi_sender/how_to_activate_code.html">help link</a></span></span>
+        <span style="font-weight: bold">How to Activate Code:&nbsp;&nbsp;</span><span><a href="https://wazapsenderextension.vercel.app/sender/wapi_sender/how_to_activate_code.html">help link</a></span></span>
     </p>
     <br><br><br>
     <p style='margin-top: 0px;
@@ -134,27 +134,7 @@
         }
         return obj
     }
-    function getActiveCode(utm_campaign) {
-        let requestObj = {"transaction_id": utm_campaign}
-        let httpRequest = new XMLHttpRequest()//第一步：创建需要的对象
-        // httpRequest.open('POST', 'http://127.0.0.1:8000/api/wapi/permission/active-code-list/', true) //第二步：打开连接
-        httpRequest.open('POST', 'https://wawebsender.com/api/wapi/permission/active-code-list/', true) //第二步：dev
-        httpRequest.setRequestHeader("Content-type","application/json")//设置请求头 注：post方式必须设置请求头（在建立连接后设置请求头）
-        httpRequest.send(JSON.stringify(requestObj));//发送请求 将情头体写在send中
-        /**
-         * 获取数据后的处理程序
-         */
-        httpRequest.onreadystatechange = function () {//请求后的回调接口，可将请求成功后要执行的程序写在其中
-            if (httpRequest.readyState == 4 && httpRequest.status == 200) {//验证请求是否发送成功
-                let responseText = httpRequest.responseText;//获取到服务端返回的数据
-                let response_json = JSON.parse(responseText)
-                for(let activeCode of response_json['data']) {
-                    renderHTML(activeCode['active_code'])
-                }
-
-            }
-        };
-    }
+    function getActiveCode(utm_campaign) {}
     function insertStr(activeCode,start, newStr){
         return activeCode.slice(0, start) + newStr + activeCode.slice(start)
     }
