--- a/pay/group_sender_pricing.html
+++ b/pay/group_sender_pricing.html
@@ -89,33 +89,7 @@
 <script>
     let plugin_id = 'nmbjblpeeiobnakglbickhpgbinojbch'
     async function openOrder(plink_id) {
-        const { userPhoneNum } = await chrome.storage.local.get('userPhoneNum')
-        const metadata = {
-            extension_type: 2,
-            plink_id: plink_id,
-            whatsapp_number: userPhoneNum
-        }
-        let requestObj = {
-            payment_method: 'card',
-            currency: 'usd',
-            metadata: metadata
-        }
-        let httpRequest = new XMLHttpRequest()//第一步：创建需要的对象
-        const PAY_URL = 'https://sender.watechdev.asia'
-        // const PAY_URL = 'https://lab.zingfront.com'
-        httpRequest.open('POST', PAY_URL + '/api/pay/make-order', true) //第二步：打开连接
-        httpRequest.setRequestHeader("Content-type","application/json")//设置请求头 注：post方式必须设置请求头（在建立连接后设置请求头）"accept, accept-encoding, authorization, content-type, dnt, origin, user-agent, x-csrftoken, x-requested-with, language, whatsapp-id, version")
-        httpRequest.send(JSON.stringify(requestObj));//发送请求 将情头体写在send中
-        /**
-         * 获取数据后的处理程序
-         */
-        httpRequest.onreadystatechange = function () {//请求后的回调接口，可将请求成功后要执行的程序写在其中
-            if (httpRequest.readyState == 4 && httpRequest.status == 200) {//验证请求是否发送成功
-                let responseText = httpRequest.responseText;//获取到服务端返回的数据
-                let response_json = JSON.parse(responseText)
-                window.location.href = response_json['data']['url']
-            }
-        };
+        window.open('https://wazapsenderextension.vercel.app/planos', '_blank')
     }
 
     function freeUseNow() {
