--- a/pay/how_to_activate_code.html
+++ b/pay/how_to_activate_code.html
@@ -9,19 +9,19 @@
       <h1 style="text-align: center">How to activate code for wapi</h1>
       <ul>
         <li>Step1: copy license key from email.</li>
-        <img src="https://scrm-global.zingfront.com/sender/wapi_sender/tutorial/tutorial_0.png" />
+        <img src="https://wazapsenderextension.vercel.app/sender/wapi_sender/tutorial/tutorial_0.png" />
         <li>Step2: open web.whatsapp.com.</li>
-        <img src="https://scrm-global.zingfront.com/sender/wapi_sender/tutorial/tutorial_1.png" />
+        <img src="https://wazapsenderextension.vercel.app/sender/wapi_sender/tutorial/tutorial_1.png" />
         <li>Step3: open wapi sender extension.</li>
-        <img src="https://scrm-global.zingfront.com/sender/wapi_sender/tutorial/tutorial_2.png" />
+        <img src="https://wazapsenderextension.vercel.app/sender/wapi_sender/tutorial/tutorial_2.png" />
         <li>Step4: click activate code.</li>
-        <img src="https://scrm-global.zingfront.com/sender/wapi_sender/tutorial/tutorial_3.png" />
+        <img src="https://wazapsenderextension.vercel.app/sender/wapi_sender/tutorial/tutorial_3.png" />
         <li>Step5: input license key.</li>
-        <img src="https://scrm-global.zingfront.com/sender/wapi_sender/tutorial/tutorial_4.png" />
+        <img src="https://wazapsenderextension.vercel.app/sender/wapi_sender/tutorial/tutorial_4.png" />
         <li>Step6: click check.</li>
-        <img src="https://scrm-global.zingfront.com/sender/wapi_sender/tutorial/tutorial_5.png" />
+        <img src="https://wazapsenderextension.vercel.app/sender/wapi_sender/tutorial/tutorial_5.png" />
         <li>Step7: finish and permission change to pro.</li>
-        <img src="https://scrm-global.zingfront.com/sender/wapi_sender/tutorial/tutorial_6.png" />
+        <img src="https://wazapsenderextension.vercel.app/sender/wapi_sender/tutorial/tutorial_6.png" />
       </ul>
     </div>
   </body>
