--- a/pay/unsubscribe_fail.html
+++ b/pay/unsubscribe_fail.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div style="text-align: center; margin: 40px 0">
-      <img src="https://scrm-global.zingfront.com/sender/wapi_sender/unsubscribe_fail.png" />
+      <img src="https://wazapsenderextension.vercel.app/sender/wapi_sender/unsubscribe_fail.png" />
     </div>
     <div
       style="
